@@ -11,11 +11,12 @@ update-manager (1:0.87.13) hardy; urgency=low
     - add "^postgresql-.*"to the removal blacklist
   * DistUpgrade/DistUpgradeViewText.py:
     - flush() output in updateStatus()
+    - show the demoted packages in a more readable
+      manner
+    - use textwrap when displaying text
   * DistUpgrade/DistUpgradeCache.py:
     - fix bug that prevented proper error message on 
       upgrade calculation error in the text frontend
-    - show the demoted packages in a more readable
-      manner
 
  --
 
